# Otus_5

./: CMakeLists.txt  Doxyfile  _matrix_8h_source.html  annotated.html  class_matrix-members.html  class_matrix.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  version_8h_source.html
.github/workflows/: cmake.yml
include/: Matrix.h
search/: all_0.js  all_1.js  all_3.js  functions_3.js  searchdata.js
src/: main.cpp
tests/: MatrixTest.cpp
